<resources>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="name_card">名片</string>
    <string name="attach_burn_after_read">阅后即焚</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="recall">撤回</string>
    <string name="reference">引用</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="msg_recall_by_user">%1$s 撤回了一条消息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="search_contanier">搜索："%s"</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_prefix">[语音]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="video_call">[视频通话]</string>
    <string name="draft">[草稿]</string>
    <string name="button_save">保存</string>
    <string name="search_header">搜</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="exit_group">退出</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="session">会话</string>
    <string name="setting">设置</string>
    <string name="group_chat">群聊</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="group_name">群聊名称</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="serach_group_message">消息搜索</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="no_members">无群成员</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="agree">同意</string>
    <string name="not_download">未下载:</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="normal_members">普通成员</string>
    <string name="send_successful">发送请求成功,等待对方验证</string>
    <string name="Network_error">网络出错</string>
    <string name="Making_sure_your_location">正在确定你的位置……</string>
    <string name="please_check">key 验证出错! 请在 AndroidManifest.xml 文件中检查 key 设置</string>
    <string name="unable_to_get_loaction">无法获取到您的位置信息!</string>
    <string name="File_does_not_exist">文件不存在</string>
    <string name="Whether_to_empty_all_chats">是否清空所有聊天记录</string>
    <string name="Send_voice_need_sdcard_support">发送语音需要sdcard支持</string>
    <string name="Recording_without_permission">无录音权限</string>
    <string name="The_recording_time_is_too_short">录音时间太短</string>
    <string name="send_failure_please">发送失败，请检测服务器是否连接</string>
    <string name="Move_into_blacklist_success">移入黑名单成功</string>
    <string name="Move_into_blacklist_failure">移入黑名单失败</string>
    <string name="you_are_group">你被群创建者从此群中移除</string>
    <string name="deleting">正在删除……</string>
    <string name="Is_moved_into_blacklist">正在移入黑名单……</string>
    <string name="being_added">正在添加……</string>
    <string name="is_quit_the_group_chat">正在退出群聊……</string>
    <string name="chatting_is_dissolution">正在解散群聊……</string>
    <string name="are_empty_group_of_news">正在清空群消息……</string>
    <string name="messages_are_empty">聊天记录已被清空</string>
    <string name="is_modify_the_group_name">正在修改群名称……</string>
    <string name="is_modify_the_group_description">正在修改群详情..</string>
    <string name="Modify_the_group_name_successful">修改群名称成功</string>
    <string name="Modify_the_group_description_successful">修改群详情成功</string>
    <string name="Modify_the_group_extension_successful">修改群扩展成功</string>
    <string name="change_the_group_name_failed_please">改变群名称失败，请检查网络或稍后重试</string>
    <string name="change_the_group_description_failed_please">修改群详情失败，请检查网络或稍后重试</string>
    <string name="change_the_group_extension_failed_please">修改群扩展失败，请检查网络或稍后重试</string>
    <string name="Exit_the_group_chat_failure">退出群聊失败:</string>
    <string name="Dissolve_group_chat_tofail">解散群聊失败:</string>
    <string name="Add_group_members_fail">添加群成员失败:</string>
    <string name="Is_unblock">正在解除屏蔽……</string>
    <string name="remove_group_of">解除群屏蔽失败，请检查网络或稍后重试</string>
    <string name="Is_change_setting">正在设置……</string>
    <string name="group_is_blocked">正在屏蔽群组……</string>
    <string name="group_of_shielding">群屏蔽失败，请检查网络或稍后重试</string>
    <string name="sure_to_empty_this">确定清空此群的聊天记录吗？</string>
    <string name="Add_a_button_was_clicked">添加按钮被点击</string>
    <string name="Video_footage">拍摄录像</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="create_group_success">群\'%s\'创建成功</string>
    <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="The_video_to_start">录像开始</string>
    <string name="Whether_to_send">是否发送？</string>
    <string name="Open_the_equipment_failure">打开设备失败!</string>
    <string name="Failed_to_download_file">下载文件失败:</string>
    <string name="Have_downloaded">已下载</string>
    <string name="Did_not_download">未下载</string>
    <string name="Has_agreed_to">已同意</string>
    <string name="Has_refused_to">已拒绝</string>
    <string name="Are_agree_with">正在同意……</string>
    <string name="Agree_with_failure">同意失败:</string>
    <string name="Is_download_voice_click_later">正在下载语音，稍后点击</string>
    <string name="search_new">搜</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="Change_the_group_name">改变群名称</string>
    <string name="change_the_group_description">改变群描述</string>
    <string name="no_more_messages">没有更多的消息了</string>
    <string name="group_id">群ID</string>
    <string name="group_announcement">群公告</string>
    <string name="share_files">共享文件</string>
    <string name="upload_files">上传</string>
    <string name="group_not_existed">群组不存在</string>
    <string name="searching">正在搜索……</string>
    <string name="group_nick">聊天室名称:</string>
    <string name="group_owner">群主：</string>
    <string name="push_no_disturb_on">开启</string>
    <string name="push_only_on">只在夜间开启(22:00 - 7:00)</string>
    <string name="push_no_disturb_off">关闭</string>
    <string name="push_saving_settings">正在保存...</string>
    <string name="push_save_failed">保存失败</string>
    <string name="login_phone">手机号</string>
    <string name="error_empty_username">用户名不能为空</string>
    <string name="error_empty_tel">电话号码不能为空</string>
    <string name="error_invalid_phone">请输入正确的手机号</string>
    <string name="error_invalid_email">请输入正确的邮箱</string>
    <string name="title_conversation">聊天</string>
    <string name="title_contact">通讯录</string>
    <string name="title_apps">应用中心</string>
    <string name="done">完成</string>
    <string name="settings_newmsg_notification">新消息提醒</string>
    <string name="general_font_size">字体大小</string>
    <string name="set_text_size_normal">标准</string>
    <string name="set_text_size_tip1">预览字体大小</string>
    <string name="set_text_size_tip2">拖动下面滑块，可以设置字体大小</string>
    <string name="set_text_size_tip3">设置后会改变聊天中的字体大小。如果在使用过程中存在问题或意见，可以反馈给团队</string>
    <string name="sticky_conversation">置顶</string>
    <string name="sticky_cancel">取消置顶</string>
    <string name="chat_info">聊天详情</string>
    <string name="add_member">添加新成员</string>
    <string name="clear_chat_records">清空聊天记录</string>
    <string name="mute_notifications">消息免打扰</string>
    <string name="show_notify_details">通知显示消息详情</string>
    <string name="no_disturb_mode">勿扰模式</string>
    <string name="no_disturb_begin_time">22:00</string>
    <string name="no_disturb_begin">开始时间</string>
    <string name="no_disturb_end">结束时间</string>
    <string name="next_day">次日</string>
    <string name="no_disturb_end_time">07:00</string>
    <string name="no_disturb_hint">开启后，在设定时间段内收到新消息时不会响铃或震动</string>
    <string name="multi_choice">多选</string>
    <string name="org_structure">组织架构</string>
    <string name="friend_invites">好友申请</string>
    <string name="group_invites">群组申请</string>
    <string name="load_more">加载中...</string>
    <string name="pull_to_load">加载更多</string>
    <string name="load_end">没有更多了~</string>
    <string name="personal_info">个人名片</string>
    <string name="email">邮箱</string>
    <string name="superior">上级</string>
    <string name="starred_friends">星标好友</string>
    <string name="search_has_message">有%d条相关消息</string>
    <string name="forward_combine_title" formatted="false">【%1$s和%2$s的聊天记录】</string>
    <string name="forward_combine_group_title">【%s群的聊天记录】</string>
    <string name="special_message">[特殊消息]</string>
    <string name="show_more">查看更多</string>
    <string name="contacts">联系人</string>
    <string name="groups">群组</string>
    <string name="chat_history">聊天记录</string>
    <string name="select_someone">确定(%d)</string>
    <string name="create_group">创建群组</string>
    <string name="group_description">群描述</string>
    <string name="group_avatar">群头像</string>
    <string name="groups_list">群组列表</string>
    <string name="owner">群管理</string>
    <string name="group_notification">群通知</string>
    <string name="add_to_administrator">设为管理</string>
    <string name="remove_admin_privilege">移除管理</string>
    <string name="transfer_owner_ship">转让群主</string>
    <string name="remove_member">移除成员</string>
    <string name="add_to_black_list">加入黑名单</string>
    <string name="remove_from_black_list">移出黑名单</string>
    <string name="set_mute">设置禁言</string>
    <string name="cancel_mute">取消禁言</string>
    <string name="message_detail">消息详情</string>
    <string name="collection">收藏</string>
    <string name="update_department">修改部门名称</string>
    <string name="start_group">创建群聊</string>
    <string name="scan">扫一扫</string>
    <string name="transfer">面对面传输</string>
    <string name="select_a_group">选择已有群</string>
    <string name="not_active">未激活</string>
    <string name="create_department">新增部门</string>
    <string name="modify_department">修改部门</string>
    <string name="create_user">新增用户</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="real_name">姓名</string>
    <string name="real_department">部门</string>
    <string name="real_position">职位</string>
    <string name="please_complete_the_info">请把信息填写完整</string>
    <string name="member_joined">%s 加入了群聊</string>
    <string name="owner_change">群主改变</string>
    <string name="company">公司</string>
</resources>