<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_top_title_height"
        android:background="@color/bg_top_bar_2"
        android:paddingRight="@dimen/dp_10">

        <include layout="@layout/layout_back_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_disturb_mode"
            android:textColor="@color/topbar_title_color"
            android:textSize="@dimen/activity_top_title_textsize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/easemob_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/no_disturb_mode"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sb_no_disturb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_4"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_4" />

        </RelativeLayout>

        <View style="@style/devide_line_eee" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_15"
            android:paddingTop="@dimen/dp_10"
            android:paddingRight="@dimen/dp_15"
            android:text="@string/no_disturb_hint" />

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_no_disturb_time_begin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/no_disturb_begin"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/tv_begin_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/no_disturb_begin_time"
                    android:textColor="@color/color_text9"
                    android:textSize="@dimen/sp_15" />

            </RelativeLayout>

            <View style="@style/devide_line_eee" />

            <RelativeLayout
                android:id="@+id/rl_no_disturb_time_end"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/no_disturb_end"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_15" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/tv_next_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next_day"
                        android:textColor="@color/color_text9"
                        android:textSize="@dimen/sp_15" />

                    <TextView
                        android:id="@+id/tv_end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:text="@string/no_disturb_end_time"
                        android:textColor="@color/color_text9"
                        android:textSize="@dimen/sp_15" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <View style="@style/devide_line_eee" />

    </LinearLayout>

</LinearLayout>