<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/em_btn_style_alert_dialog_background"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/logout_hint"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/em_btn_style_alert_dialog_special"
            android:gravity="center"
            android:onClick="logout"
            android:padding="@dimen/dp_6"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_19" />

        <Button
            android:layout_marginLeft="@dimen/dp_6"
            android:layout_marginRight="@dimen/dp_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            android:layout_marginBottom="@dimen/dp_4"
            android:background="@drawable/em_btn_gray_selector"
            android:gravity="center"
            android:onClick="cancel"
            android:padding="@dimen/dp_6"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_19" />
    </LinearLayout>

</RelativeLayout>