<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_top_title_height"
        android:background="@color/bg_top_bar_2">

        <include layout="@layout/layout_back_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings_newmsg_notification"
            android:textColor="@color/topbar_title_color"
            android:textSize="@dimen/activity_top_title_textsize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:background="@android:color/white"
            android:paddingLeft="@dimen/dp_15">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/newnotify"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_15" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sb_new_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_4"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_4" />

        </RelativeLayout>

        <!--<View style="@style/style_line"/>-->

        <!--<View style="@style/style_line"/>-->
        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/show_notify_details"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_15" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb_notify_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_4"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_4" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/dp_10"
                android:paddingLeft="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/voice"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_15" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_4"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_4" />

            </RelativeLayout>

            <!--<View style="@style/style_line"/>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/shake"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_15" />

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/sb_shake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="@dimen/dp_10"
                    android:paddingTop="@dimen/dp_4"
                    android:paddingRight="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_4" />

            </RelativeLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:paddingLeft="@dimen/dp_10"
                android:paddingTop="@dimen/dp_5"
                android:paddingRight="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_5"
                android:text="消息免打扰"
                android:textColor="@color/color_black"
                android:textStyle="bold"
                android:visibility="gone" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox_style"
                    android:padding="@dimen/dp_10"
                    android:text="@string/push_no_disturb_on" />

                <View style="@style/style_line" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox_style"
                    android:padding="@dimen/dp_10"
                    android:text="@string/push_only_on" />

                <View style="@style/style_line" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableEnd="@drawable/checkbox_style"
                    android:padding="@dimen/dp_10"
                    android:text="@string/push_no_disturb_off" />
            </RadioGroup>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>